--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage":"https://github.com/anvar010/PORTFOLIO.git",
+  "homepage":"https://anvar010.github.io/PORTFOLIO",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
